k8s/monitoring/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crunchy-ingress
  namespace: databases
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - databases.koellgma.de
      secretName: databases-tls
  rules:
    - host: databases.koellgma.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crunchy-grafana
                port:
                  number: 3000
